logs/dag_id=db_dg/run_id=manual__2024-01-04T165233.352344+0000/task_id=insert_using_python_data/attempt=3.log
[2024-01-04T16:57:09.285+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: db_dg.insert_using_python_data manual__2024-01-04T16:52:33.352344+00:00 [queued]>
[2024-01-04T16:57:09.296+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: db_dg.insert_using_python_data manual__2024-01-04T16:52:33.352344+00:00 [queued]>
[2024-01-04T16:57:09.296+0000] {taskinstance.py:2171} INFO - Starting attempt 3 of 3
[2024-01-04T16:57:09.440+0000] {taskinstance.py:2192} INFO - Executing <Task(PythonOperator): insert_using_python_data> on 2024-01-04 16:52:33.352344+00:00
[2024-01-04T16:57:09.444+0000] {standard_task_runner.py:60} INFO - Started process 374 to run task
[2024-01-04T16:57:09.447+0000] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'db_dg', 'insert_using_python_data', 'manual__2024-01-04T16:52:33.352344+00:00', '--job-id', '41', '--raw', '--subdir', 'DAGS_FOLDER/create_database_dag.py', '--cfg-path', '/tmp/tmpkcmssgan']
[2024-01-04T16:57:09.449+0000] {standard_task_runner.py:88} INFO - Job 41: Subtask insert_using_python_data
[2024-01-04T16:57:09.580+0000] {task_command.py:423} INFO - Running <TaskInstance: db_dg.insert_using_python_data manual__2024-01-04T16:52:33.352344+00:00 [running]> on host e2a9126be768
[2024-01-04T16:57:09.727+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='prady1900' AIRFLOW_CTX_DAG_ID='db_dg' AIRFLOW_CTX_TASK_ID='insert_using_python_data' AIRFLOW_CTX_EXECUTION_DATE='2024-01-04T16:52:33.352344+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-01-04T16:52:33.352344+00:00'
[2024-01-04T16:57:09.767+0000] {base.py:83} INFO - Using connection ID 'postgres_connect' for task execution.
[2024-01-04T16:57:09.880+0000] {base.py:83} INFO - Using connection ID 'postgres_connect' for task execution.
[2024-01-04T16:57:09.901+0000] {logging_mixin.py:188} WARNING - /opt/airflow/dags/create_database_dag.py:51 UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.
[2024-01-04T16:57:09.903+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/io/sql.py", line 2202, in execute
    cur.execute(sql, *args)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 1: ...ELECT name FROM sqlite_master WHERE type='table' AND name=?;
                                                                      ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/create_database_dag.py", line 51, in insert_data_postg
    df_inc.to_sql('incident_new',conn,if_exists='append')
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/core/generic.py", line 2878, in to_sql
    return sql.to_sql(
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/io/sql.py", line 769, in to_sql
    return pandas_sql.to_sql(
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/io/sql.py", line 2378, in to_sql
    table.create()
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/io/sql.py", line 903, in create
    if self.exists():
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/io/sql.py", line 889, in exists
    return self.pd_sql.has_table(self.name, self.schema)
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/io/sql.py", line 2385, in has_table
    return len(self.execute(query, [name]).fetchall()) > 0
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/io/sql.py", line 2214, in execute
    raise ex from exc
pandas.errors.DatabaseError: Execution failed on sql 'SELECT name FROM sqlite_master WHERE type='table' AND name=?;': syntax error at or near ";"
LINE 1: ...ELECT name FROM sqlite_master WHERE type='table' AND name=?;
                                                                      ^

[2024-01-04T16:57:09.915+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=db_dg, task_id=insert_using_python_data, execution_date=20240104T165233, start_date=20240104T165709, end_date=20240104T165709
[2024-01-04T16:57:10.040+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 41 for task insert_using_python_data (Execution failed on sql 'SELECT name FROM sqlite_master WHERE type='table' AND name=?;': syntax error at or near ";"
LINE 1: ...ELECT name FROM sqlite_master WHERE type='table' AND name=?;
                                                                      ^
; 374)
[2024-01-04T16:57:10.080+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-04T16:57:10.099+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
